feat(Close #45): implement get source
